syntax = "proto3";
package pb;

message RetainedMessage {
  string ID = 1;
  string Tenant = 2;
  bytes Topic = 3;
  bytes Payload = 4;
  int32 Qos = 5;
  int64 LastAdded = 6;
  int64 LastDeleted = 7;
}

message RetainedMessageMetadataList {
  repeated RetainedMessage RetainedMessages = 1;
}

message ByTopicPatternInput {
  string Tenant = 1;
  bytes Pattern = 2;
}

message ByTopicPatternOutput {
  repeated RetainedMessage messages = 1;
}

service TopicsService {
  rpc ByTopicPattern(ByTopicPatternInput) returns (ByTopicPatternOutput);
}